--- a/style.css
+++ b/style.css
@@ -262,3 +262,76 @@ footer .copyright {
     margin: 0 auto;
     top: -10px;
 }
+
+.search{
+    background-color: #f9f9f9;
+    width: 60%;
+    height: 50vh;
+    
+}
+.search-top{
+    width: 60%;
+    height: auto;
+    background-color: #333;
+    color: white;
+    border-radius: 10px;
+    
+
+}
+.img-search-box{
+    background-color: #333;
+    width: 60%;
+    height: auto;
+    bottom: 0%;
+    position: relative;
+    color: #f9f9f9;
+    border-radius: 10px;
+}
+.img-search{
+    width :30px;
+    height: auto;
+    right: 10%;
+    position: absolute;
+    
+}
+/*.heart-gif{
+    width:40%;
+    left: 10%;
+    position: relative;
+}
+.heart-gif-box{
+    right: 0;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    width: auto;
+}
+.heding-heart-rate{
+    bottom: 0;
+    display: flex;
+    position: relative;
+    left: 20%;
+    width: 25% ;
+}
+.temprature-gif{
+    width:40%;
+    left: 10%;
+    position: relative;
+}
+.temperature-gif-box{
+    right: 0;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    width: auto;
+}
+.heding-temprature-rate{
+    bottom: 0;
+    display: flex;
+    position: relative;
+    left: 20%;
+    width: 25% ;
+}*/
+.map-gif{
+    width: 50%;
+}
